Set up as replacement for display-logic

--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,17 @@
     "require": {
         "silverstripe/framework": "^4.12"
     },
+    "replace": {
+        "silverstripe/display-logic": "*",
+        "unclecheese/display-logic": "*"
+    },
     "autoload": {
         "psr-4": {
             "Bigfork\\SilverstripeFormtacular\\": "src/"
-        }
+        },
+        "files": [
+            "compat/DisplayLogicWrapper.php"
+        ]
     },
     "extra": {
         "expose": [
