--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "silverstripe/framework": "^4.12"
+        "silverstripe/framework": "^4.12|^5"
     },
     "replace": {
         "silverstripe/display-logic": "*",
